force-app/main/default/objects/Tag_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Release_Category__c</fullName>
        <description>Categorization used for filtering the devTagStories component.</description>
        <formula>IF( Story__r.Release__r.Is_Backlog__c == true,&quot;Backlog&quot;,IF( TEXT( Story__r.Release__r.Status__c ) == &apos;Active&apos;, &quot;Active Release&quot;,IF( TEXT( Story__r.Release__r.Status__c ) == &apos;Planning&apos;, &quot;Planning Release&quot;,&quot;Accepted Release&quot;)))</formula>
        <inlineHelpText>Categorization used for filtering the devTagStories component.</inlineHelpText>
        <label>Release Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tag_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Tag Assignments</relationshipLabel>
        <relationshipName>Tag_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tag Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tag Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>